--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -37,16 +37,16 @@
                   <img src="assets/img/portfolio/Amazon.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Amazon2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927771/ugxxgjxcptiqeqm81c0i.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Amazon3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927756/a7hvqqcwckgvlfmeejik.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Amazon4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927744/pmecjli3p1fyd13ihitu.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Amazon5.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927748/l2ddlj2r9sv0dwiz3k9w.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
