--- a/Flipkart_portfolio.html
+++ b/Flipkart_portfolio.html
@@ -37,13 +37,13 @@
                   <img src="assets/img/portfolio/Flipkart.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Flipkart2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927786/l5rkt5sf7rdfkbowly9o.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Flipkart3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927775/h0y0rqqdxhbl5xgbfjdm.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Flipkart4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927759/soul9luvbwztt9nihwza.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
