--- a/Netflix_portfolio.html
+++ b/Netflix_portfolio.html
@@ -37,10 +37,10 @@
                   <img src="assets/img/portfolio/Netflix.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Netflix2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927828/mc8raynitjioau8dszii.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Netflix3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927823/qnxaychxoe1ovrjokf1f.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
