--- a/craveroute.html
+++ b/craveroute.html
@@ -39,28 +39,28 @@
                   <img src="assets/img/portfolio/Craveroute1.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930649/ved4s3abbpa76xz8cadv.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930649/jhksignaamuiuc9v8mk6.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930639/lixcr6efpxvuqhaoxjjq.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute5.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930643/hc7wjkoomeb5c1tsjhok.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute6.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930640/ykb0jbz15efsvmwljgeu.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute7.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930643/q0e17ns3lwwm1o65t8w1.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute8.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930644/ic8pvaiwtsqrnpojraes.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute9.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930645/oq6x1gjalsgmxp5ptdgd.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
