--- a/nodeCrud.html
+++ b/nodeCrud.html
@@ -36,35 +36,27 @@
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant1.png" style="height: 100%; width: 100%;"
+                                    <img src="assets/img/portfolio/NodeCrud1.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant2.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930139/emwvxjsxp93blry3ath6.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant3.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930143/i0v3a2rwzue2nrylplcj.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant4.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930139/fq4k9akgedj6odgvugec.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant5.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930141/juw93suexxjav3cmhi4l.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant6.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant7.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant8.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930142/kq54gq19lucbdfpmvu8h.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                             </div>
