--- a/porsche.html
+++ b/porsche.html
@@ -40,31 +40,31 @@
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche2.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931311/gi9okpdve4smztbwphqg.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche3.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931297/esptiwoq9nel3swpoahl.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche4.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931287/jwqvelu561ndpcfke6ga.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche5.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931291/cnve5g6fxny1h9q5lzew.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche6.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931319/egrdps54yhct9qjwafix.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche7.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931323/pikev7yopx1dalnwq0rx.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/Porsche8.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738931296/vk5i0ty4pcqwkuhqtfpa.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                             </div>
