--- a/valorant.html
+++ b/valorant.html
@@ -44,43 +44,43 @@
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant3.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929377/qlynftkpfkzeoplqbqjk.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant4.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929270/lkmme9zjnrqe4qkyiaao.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant5.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929268/wfjxoupbkuzkaq170sta.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant6.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929268/u1zdbbzkjwpimaxfpz3h.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant7.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929293/ub48rc1aohta6eqlgztp.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant8.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929296/lcuzi3ok2vcv4tcxynxp.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant9.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929292/ohmrcrs6jwh11jx3mx9v.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant10.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929275/oy0tsauzbaghqmxcbljc.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant11.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929303/wu3elszf5ardityxna5i.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant12.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929302/b52cz4dlpk67qzcljqq1.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                             </div>
