--- a/youtuberc.html
+++ b/youtuberc.html
@@ -42,25 +42,19 @@
                   <img src="assets/img/portfolio/youtuberc2.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929329/civjf4h9orpfaqxztxax.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc5.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929340/hvx6ekw2bqviss6rzymu.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc6.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929378/rt0zoatt1b0swxqgvwc3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc7.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929385/dgw8hzdul1iylurgmzqf.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc8.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc9.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/youtuberc10.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929379/mi818oikngmghkjmitwt.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
