--- a/figmaLapshop.html
+++ b/figmaLapshop.html
@@ -40,27 +40,15 @@
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop2.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933128/kcfgqeykjux9mxixcegg.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop3.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933132/k3jrextyec8s25jymqhv.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop4.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop5.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop6.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaLapshop7.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933120/ogecd8cxid4hchcijiqf.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                             </div>
