--- a/figmaSlotflow.html
+++ b/figmaSlotflow.html
@@ -40,27 +40,23 @@
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow2.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933123/pfwhiyzrcxge6lxsoxgd.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow3.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933125/ckqzks3e6nbfm0xvcxco.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow4.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933126/xsxupndzwswdjzq3oit6.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow5.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933126/nwvcobqkzkpbe9xmdida.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow6.png" style="height: 100%; width: 100%;"
-                                        alt="">
-                                </div>
-                                <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/FigmaSlotflow7.png" style="height: 100%; width: 100%;"
+                                    <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738933127/zduaarqmre3dh5u1rz0i.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                             </div>
