Names error fixed

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <h4>OLC-CRUD-CLONE</h4>
               <p>Clone</p>
               <div class="portfolio-links">
-                <a href="olx.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                <a href="Olx.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
