Fix : Netflix link updated

--- a/netflixReact.html
+++ b/netflixReact.html
@@ -72,8 +72,8 @@
               <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/nexflix-rcgpt"
                   target="_blank">https://github.com/midhunkalarikkal/nexflix-rcgpt</a>
               </li>
-              <li><strong>Live URL</strong>: <a href="https://netflix-rcgpt.web.app/browse"
-                  target="_blank">https://netflix-rcgpt.web.app/browse/</a></li>
+              <li><strong>Live URL</strong>: <a href="https://netflix-rcgpt.web.app"
+                  target="_blank">https://netflix-rcgpt.web.app</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
                 I developed a Netflix Clone using React, Tailwind CSS, and Redux, integrating Firebase for authentication and hosting. This project leverages the TMDB API to fetch movie data and employs custom hooks to efficiently handle different category-based requests. To enhance user experience, I implemented shimmer effects, ensuring smooth content loading, and various custom features for seamless navigation.
